# HCC-Risk-Navigator

./: .env.example  .gitignore  README.md  app.py  demo_patient_ids.txt  demo_script.md  hydrate_fhir.py  memory.md  pyproject.toml  render.yaml  requirements.txt  scratch_check_fhir.py  todo.txt  verify_fhir.py
docs/: DEMO_SCRIPT.md  demo_script.md  glossary.md  hackathon_details.md  next_prompt.txt  promptopinion.md  prompts.md  standard_library_enformcement.md
scripts/: deploy_render.py  record_demo.py  seed_db.py
src/: database.py  hcc_engine.py  models.py  pa_engine.py  server.py
tests/: conftest.py  test_fhir_integration.py  test_hcc_auditor.py  test_mcp_server.py  test_pa_reasoning.py  test_seed_db.py  test_ui.py  test_wait_utils.py  wait_utils.py
